# x402-polkadot

./: .gitignore  README.md  start.sh
client/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  index.html  package.json
client/src/: main.js
client/src/config/: networks.js
client/src/services/: api.js  wallet.js
client/src/styles/: main.css
client/src/utils/: logger.js
facilitator/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
facilitator/src/: config.rs  error.rs  main.rs  types.rs
facilitator/src/api/: models.rs  routes.rs
facilitator/src/polkadot/: client.rs  mod.rs  networks.rs  types.rs  validator.rs
server/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
server/src/: config.rs  error.rs  main.rs
server/src/api/: models.rs  routes.rs
server/src/facilitator/: client.rs  mod.rs  types.rs
server/src/x402/: protocol.rs  types.rs
